vlib/v/checker/tests/immutable_builtin_modify.out
vlib/v/checker/tests/immutable_builtin_modify.vv:2:3: error: `string` can not be modified
    1 | s := ''
    2 | s.len = 123
      |   ~~~
    3 | //
    4 | b := []u8{}
vlib/v/checker/tests/immutable_builtin_modify.vv:5:3: error: `array` can not be modified
    3 | //
    4 | b := []u8{}
    5 | b.len = 34
      |   ~~~
