vlib/v/checker/tests/immutable_builtin_modify.vv
s := ''
s.len = 123
//
b := []u8{}
b.len = 34
